--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -32,7 +32,7 @@
                   <div class="col-sm-8">
                       <div class="text-light pt-3">
                     <h5 class="card-title" id="res-title" data-toggle="tooltip" data-placement="top" title="{{content?.name}}">{{content?.name | titlecase | slice:0:35}}<span *ngIf="content.name && content.name.length > 35">...</span></h5>
-                    <p class="card-text">version : {{content?.version}}.0</p>
+                    <p *ngIf="content?.version" class="card-text">version : {{content?.version}}.0</p>
                   </div>
                   </div>
                   <button *ngIf="content?.badgeAssertions" type="button" class="btn text-light float-right badgesprite badgeimg " id="styletick">
@@ -44,9 +44,9 @@
              <!-- <div> <i class="far fa-heart float-right"></i></div> -->
              <p class="creator mb-0">Created By : {{content?.creators}}</p>
              <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
-             <p class="creator mb-0"> Created Year: {{content?.year}}</p>
+             <p *ngIf="content?.year" class="creator mb-0"> Created Year: {{content?.year}}</p>
              <p class="creator contentlink mb-0" id="link" *ngIf="content?.mimeType === 'text/x-url' &&content?.link">Link : {{content?.link}}</p>
-            <div class="">  <span class="desc1">Description: </span>   <span class="card-text1">{{content?.description | titlecase | slice:0:60}}</span>   <span *ngIf="content?.description && content.description?.length > 60">...</span></div>
+            <div data-toggle="tooltip" data-placement="top" title="{{content?.description}}">  <span  class="desc1">Description: </span>   <span class="card-text1">{{content?.description | titlecase | slice:0:60}}</span>   <span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
             <div class="d-flex justify-content-center mt-30">
               <button *ngIf="(content?.status==='Draft' || content?.status=== 'DRAFT' || content?.status=== 'LIVE' || content?.status=== 'Live') && copied[content['versionKey']] && route.isActive('myassets')" type="button" class="btn text-secondary" id="style"
