--- a/src/app/client/src/app/modules/shared/components/space-card-loggedin/space-card-loggedin/space-card-loggedin.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-card-loggedin/space-card-loggedin/space-card-loggedin.component.scss
@@ -15,8 +15,12 @@
     width: 21px;
     padding-top: 12px;
   }
+  .card-text{
+    min-height: 99px;
+    max-height: 99px;
+
+  }
   .card-text, .card-title{
-    min-height: 45px;
     text-overflow: ellipsis;
     white-space: normal;
     overflow: hidden;
@@ -54,12 +58,17 @@ background-color: #585858;
  .card {
    height: auto;
    width: 350px;
+   min-height: 335px;
+    max-height: 335px;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
    font-family: 'Muli', sans-serif;
    cursor: pointer;
  }
  .card-header {
    cursor: pointer;
+   min-height: 131px;
+    max-height: 131px;
+
  }
  .col-sm-8 {
    height: fit-content;
