--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -67,7 +67,7 @@
              <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' && assetDetail?.link.slice(0,4) !== 'http' ">Link:
                  <a href="http://{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
             </p>
-            <p class="card-text" *ngIf="assetDetail?.mimeType !=='text/x-url'">Submitted By : {{ assetDetail?.creator }}@{{ assetDetail?.creators }}</p>
+            <p class="card-text" *ngIf="assetDetail?.mimeType">Submitted By : {{ assetDetail?.organisation[assetDetail.organisation.length - 1] }}</p>
             <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn && assetDetail?.mimeType !=='text/x-url'">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
 
 
@@ -143,7 +143,7 @@
     <div class="card-footer text-muted pt-30 pb-0">
         <p>
             <span *ngIf="assetDetail?.version && assetDetail?.mimeType !=='text/x-url'">Version : {{assetDetail?.version}}.0</span>  
-            <span style="font-weight: bold;" *ngIf="assetDetail?.creators">
+            <span  *ngIf="assetDetail?.creators && assetDetail?.mimeType !=='text/x-url'"> &nbsp; | Created By
                 {{assetDetail?.creators}}</span>
                   <span *ngIf="assetDetail?.since"> | Created Year :
                 {{assetDetail?.year}} </span>
