--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -67,7 +67,7 @@
              <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' && assetDetail?.link.slice(0,4) !== 'http' ">Link:
                  <a href="http://{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
             </p>
-            <p class="card-text" *ngIf="assetDetail?.mimeType">Submitted By : {{ assetDetail?.organisation[assetDetail.organisation.length - 1] }}</p>
+            <p class="card-text" style="font-weight: bolder;" *ngIf="assetDetail?.mimeType"> {{ assetDetail?.organisation[assetDetail.organisation.length - 1] }}</p>
             <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn && assetDetail?.mimeType !=='text/x-url'">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
 
 
