--- a/src/app/client/src/app/modules/shared/components/space-card/space-card.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-card/space-card.component.html
@@ -52,7 +52,7 @@
     </div>
     <hr>
     <div class="created-by">
-      <span style="font-weight: bolder;" class="creator" *ngIf="data?.creators"> {{data?.creators }}</span>
+      <span style="font-weight: bolder;" class="creator" *ngIf="data?.creators">Created By: {{data?.creators }}</span>
     </div>
   </div>
 </div>
