--- a/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.html
+++ b/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.html
@@ -71,7 +71,7 @@
           </div>
        
       </div>
-      <div class="three wide computer twelve wide tablet column mt-lg-5" id="search">
+      <div class="three wide computer twelve wide tablet column mt-lg-5 pt-2" id="search">
           <app-search class="flex-as-center width-100" [slugInfo]="slugInfo"></app-search>
       </div>
     </div>
