--- a/src/app/client/src/app/modules/home/component/space-main-home/space-main-home.component.scss
+++ b/src/app/client/src/app/modules/home/component/space-main-home/space-main-home.component.scss
@@ -17,24 +17,24 @@
     width: 100%;
     color: #000;
    } 
- .text-c{
-     width: 54rem;
-     margin: auto;
-     display: block;
-     font-size: 17px;
-     font-family: 'Muli', sans-serif;
-     margin-bottom: 1rem !important;
- }
+//  .text-c{
+//      width: 54rem;
+//      margin: auto;
+//      display: block;
+//      font-size: 17px;
+//      font-family: 'Muli', sans-serif;
+//      margin-bottom: 1rem !important;
+//  }
  .fa-1{
   font-size: 32px;
   font-weight: 700;
-  font-family: 'Muli',sans-serif,Bold;
+  font-family: 'Roboto Slab',Bold;
   margin-bottom: 0!important;
  }
  .text-1{
   font-size: 24px;
   font-style: italic;
-  font-family: Muli,sans-serif;
+  font-family:Roboto Slab;
  }
 p {
   margin: 0 0 1rem;
@@ -45,7 +45,7 @@ p {
   margin: auto;
   display: block;
   font-size: 17px;
-  font-family: 'Muli',sans-serif;
+  font-family: 'Montserrat';
   margin-bottom: 1rem!important;
  }
  .pb-5 {
