--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -20,9 +20,13 @@
     margin: auto;
     display: block;
     font-size: 17px;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Montserrat';
     line-height: 2em;
   }
+.text-ac {
+  font-family: 'Roboto Slab';
+  // font-weight: bold;
+}
   ul li {
     margin-bottom: 0;
   }
