--- a/src/app/client/src/app/modules/shared/components/space-card-loggedin/space-card-loggedin/space-card-loggedin.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-card-loggedin/space-card-loggedin/space-card-loggedin.component.html
@@ -1,5 +1,5 @@
 <div class="card  mb-5" *ngIf="data" (click)="onAction(data,data.action.onImage, $event, data?.source)">
-    <div class="card-header" style="background: #585858"
+    <div class="card-header" style="background: #3E418A"
       (click)="onAction(data,data.action.onImage, $event, data?.source)">
       <div class="row">
         <div class="thick-gray-border sprite knowledgeimg" *ngIf="data?.board === 'Knowledge'">
