--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
@@ -299,7 +299,7 @@
         </ngx-avatar>
       </div>
     </div>
-    <div class="fs-2-5 font-w-bold mb-15 text-ac">{{userProfile.firstName | titlecase}} {{userProfile.lastName |
+    <div class="username fs-2-5 font-w-bold mb-15 text-ac">{{userProfile.firstName | titlecase}} {{userProfile.lastName |
       titlecase}}</div>
     <div class="fs-1-5 font-w-bold mb-10 text-ac" *ngIf=" orgDetails && orgDetails.orgName">{{orgDetails.orgName}}</div>
     <div class="m-0 pl-0 computer only" *ngIf=" orgDetails && orgDetails.locations">
@@ -331,7 +331,7 @@
   <section>
     <div class="container mt-5 mb-30">
       <div class="card">
-        <div class="card-header text-center text-light" style="background: #585858;">
+        <div class="card-header text-center text-light" style="background: #3E418A;">
           <div class="row mt-15">
             <div class="ml-15">
               <h4>User Information</h4>
