--- a/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
@@ -25,7 +25,9 @@
   font-weight: normal;
   padding: 10px 0;
 }
-
+span {
+  font-family: 'Montserrat' !important;
+}
 .ui.left.icon.input .icon {
   //left: 11px;
   // top: 13px;
@@ -61,5 +63,5 @@
 }
 
 .darkgreybg {
-  background: #585858 !important
+  background: #865BA0 !important
 }
