--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -75,7 +75,7 @@
 			<div class="ui logo d-flex flex-ai-center row">
 					<div class="col-2">
 							<span class="navbar-brand ">
-									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/space_logo.png" alt="sunbird.ins"></a>
+									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/spacelogonew.png" alt="sunbird.ins"></a>
 								</span>
 							</div>
 							<div class="col navbar-toggle collapsed">
@@ -120,10 +120,10 @@
 				<div id="owl-demo" class="owl-carousel slideshow-carousel">
 					<!-- SlideShow Item-->
 					<!-- <div class="container"> -->
-					<div class="item"><img src="images/banner_bg.jpg" alt="The Last of us">
+					<div class="item"><img src="images/spacebannernew.jpg" alt="The Last of us">
 						<div class="slide-details text-center text-white">
 							<div class="container-1">
-								<p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p>
+								<!-- <p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p> -->
 								<p class="text"> A place to search, discover and share assets including concepts, methods, processes, software, hardware and data.
 								</p>
 								<br> <button class="ui explore btn btn-purple button flex-as-center mr-20" tabindex="0"
