--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -17,8 +17,15 @@
 
 }
 
+.field {
+    label {
+        font-family: 'Roboto Slab' !important;
+        font-size: 1.25em;
+        font-weight: 400;
+    }
+}
 .button {
-    background-color: #a8abe3 !important;
+    background-color: #865BA0 !important;
     border: none;
     width: fit-content;
     border-radius: 5px;
