--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
@@ -54,7 +54,7 @@ font-family: 'Muli', sans-serif;
     height: 44px !important;
 }
 .text{
-    font-family:'Muli' !important; 
+    font-family:'Montserrat' !important; 
     color: black;
   }
 hr{
@@ -86,6 +86,7 @@ a:hover, a:active {
 .ft-1 a {
     text-decoration: none;
     font-size: 15.6px !important;
+    font-family: 'Roboto Slab';
     color: #707070 !important;
     cursor: pointer;
 }
