--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.html
@@ -6,7 +6,7 @@
     <div role="banner" class="ui logo d-flex flex-ai-center row">
       <div class="ml-10">
         <a class="flex-ai-center cursor-pointer" (click)="navigateToHome()">
-          <img class="image centered  ml-10" alt={{tenantName}} src="../../../../../assets/images/space_logo.png">
+          <img class="image centered  ml-10" alt={{tenantName}} src="../../../../../assets/images/spacelogonew.png">
         </a>
       </div>
       <div class="" *ngIf="slug !=='space'">
@@ -153,7 +153,7 @@
     </div>
   </div>
 </div>
-<div class="navbar-bg p-20 navbar-padding" *ngIf="userService.loggedIn" style="background-color:#BABABA">
+<div class="navbar-bg p-20 navbar-padding" *ngIf="userService.loggedIn" style="background-color:#865BA0">
   <div class="ui mobile-view container d-flex flex-ai-center mx-0 fz">
 
     <div class="row">
