--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.scss
@@ -3,19 +3,19 @@
 h4 {
     font-size: 40px;
     color: #636363;
+    font-family: 'Roboto Slab';
 }
 .container {
     width: 950px !important;
-    font-family: 'Muli', sans-serif;
 }
 
 
 .btn-sec {
-    background-color: #a8abe3 !important;
+    background-color: #865BA0 !important;
      border: none;
      border-radius: 5px;
      height: 40px;
-     font-family: "Muli",sans-serif;
+     font-family: 'Montserrat';
      font-size: 15px;
      text-transform: uppercase;
      font-weight: 700;
@@ -23,17 +23,17 @@ h4 {
      cursor: pointer;
    }
    .btn-outline :hover{
-       background-color:  #a8abe3 !important;
-       border-color:  #a8abe3 !important;
+       background-color:  #865BA0 !important;
+       border-color:  #865BA0 !important;
        color: white
    }
    .btn-outline {
-       color: #a8abe3;
-       border-color: #a8abe3;
-       border-color:  #a8abe3 !important;
+       color: #865BA0;
+       border-color: #865BA0;
+       border-color:  #865BA0 !important;
      border-radius: 5px;
      height: 40px;
-     font-family: "Muli",sans-serif;
+     font-family: 'Montserrat';
      font-size: 15px;
      width: 120px;
      text-transform: uppercase;
@@ -41,7 +41,11 @@ h4 {
      box-shadow: none;
      cursor: pointer;
    }
-   
+   .label {
+       font-family: 'Roboto Slab';
+       font-size: 1.25em;
+       font-weight: 400;
+   }
    @media screen and (min-width:320px) and (max-width:980px) {
     .container {
         width: 90vw !important;
