--- a/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
@@ -163,7 +163,7 @@
   appBodyScroll (dismissed)="openmodal = false" #modal *ngIf="openmodal">
 
   <!--Header-->
-  <div class="sb-modal-header" style="background-color: #a8abe3;">
+  <div class="sb-modal-header" style="background-color: #865BA0;">
     <!-- {{resourceService?.frmelmnts?.lbl?.signinenrollTitle}} -->
     Sign in to view Asset
   </div>
