--- a/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
+++ b/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
@@ -18,7 +18,7 @@
   }
     
   .card-header {
-    background: #585858
+    background: #3E418A
   }
   .fa {
       font-size: 30px;
@@ -26,6 +26,7 @@
   span {
     display: -webkit-inline-box;
     list-style: none;
+    font-family: 'Montserrat' !important;
   }
   h5 {
     padding-top: 0.5rem;
@@ -39,7 +40,7 @@
 }
 .card {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
- font-family: 'Muli', sans-serif;
+ font-family: 'Roboto Slab';
 }
 
 #stylefav {
