--- a/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
@@ -29,7 +29,7 @@
     -webkit-line-clamp: 2;
     font-weight: 600;
     margin-bottom: 10px;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Roboto Slab';
   }
   .card-text1{
     min-height: 30px;
@@ -63,7 +63,7 @@ background-color: #585858;
    min-height: 335px;
     max-height: 335px;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-   font-family: 'Muli', sans-serif;
+   font-family: 'Roboto Slab';
    cursor: pointer;
  }
  .card-header {
@@ -181,4 +181,7 @@ hr {
 .contentlink:hover{
   text-decoration: underline;
   cursor: pointer;
+}
+span {
+  font-family: 'Montserrat' !important;
 }
