--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
@@ -146,6 +146,13 @@ display: inline-block;
     }
   }
 }
+span {
+  font-family: 'Montserrat' !important;
+}
+.card , .username {
+  font-family: 'Roboto Slab';
+  font-weight: 400;
+}
 // @media only screen and (max-width: 1023px){
 //   ::ng-deep {
 //     .ui.popup {
