--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -116,7 +116,7 @@ body {
   }
 }
 .btn-purple {
-  background-color: #a8abe3 !important;
+  background-color: #865BA0 !important;
   border-radius: 4px !important;
   border: none;
   color: #fff !important;
