--- a/src/app/client/src/assets/styles/styles.scss
+++ b/src/app/client/src/assets/styles/styles.scss
@@ -41,4 +41,10 @@
   padding-bottom: 0.7em;
   font-weight: bold !important;
 }
-
+h5 {
+  font-family: 'Roboto Slab' !important;
+  font-weight: 500;
+}
+// a {
+//   font-family: 'Montserrat' !important;
+// }
