--- a/src/app/tenant/space/css/custom.css
+++ b/src/app/tenant/space/css/custom.css
@@ -459,6 +459,9 @@ address{margin:0;}
 		font-size:22px;
 		/* text-shadow:1px 1px 1px #000; */
 		/* width:90%; */
+		position: absolute;
+    left: 0;
+    bottom: 0;
 		width: auto;
 		padding:20px 30px;
 	}
@@ -492,7 +495,7 @@ address{margin:0;}
 		font-size:22px;
 	}
 	.slide-details{
-		transform:translate(-50%,-60%);
+		transform: translate(10%,30%);
 	}
 	.slide-actions{
 		padding:10px 0;
@@ -608,11 +611,11 @@ address{margin:0;}
     margin: auto;
     display: block;
 	font-size: 17px;
-	color: #FFFFFF;
+	color: black;
     font-family: 'Muli', sans-serif;
   }
   .btn-purple {
-	background-color: #a8abe3 !important;
+	background-color: #865BA0 !important;
 	border-radius:4px !important;
 	border: none;
 	color:#fff !important;
@@ -630,7 +633,8 @@ address{margin:0;}
     align-items: center !important;
 }
 .image {
-	height: 44px !important;
+	/*height: 44px !important;
+	*/
 	max-height: 56px;
     vertical-align: middle;
     border-style: none;
@@ -792,7 +796,10 @@ address{margin:0;}
 	border-width: 2px;
 	margin-right: 10px;
   }
-  
+  a.menuItem {
+	  font-family: 'Roboto Slab' !important;
+	  font-size: 1.25em;
+  }
   .ui.icon.button {
 	background: #edf4f9;
 	padding: 1px 7px 4px 7px;
@@ -904,6 +911,9 @@ address{margin:0;}
 	cursor: pointer;
 	opacity: 0.8;
 }
+a.menuItem:hover {
+	color: #865BA0;
+}
 a:not([href]):not([tabindex]) {
     /* color: inherit; */
     text-decoration: none;
@@ -1012,8 +1022,9 @@ font-family: 'Muli', sans-serif;
     font-size: 16px;
     color: #585858;
 }
-.image{
-    height: 44px !important;
+.image {
+   /* height: 44px !important;
+   */
 }
 /* hr{
     border: none !important;
@@ -1043,7 +1054,8 @@ a:hover, a:active {
 }
 .ft-1 a {
     text-decoration: none;
-    font-size:1.3em;
+	font-size:1.3em;
+	font-family: 'Roboto Slab';
     color: #707070 !important;
     cursor: pointer;
 }
