navigation,prefix and link and resource asset related changes with respect to new environment

--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -16,9 +16,15 @@
     font-family: 'Muli', sans-serif;
 
 }
-
+.field {
+    label {
+        font-family: 'Roboto Slab' !important;
+        font-size: 1.25em;
+        font-weight: 400;
+    }
+}
 .button {
-    background-color: #a8abe3 !important;
+    background-color: #865BA0 !important;
     border: none;
     width: fit-content;
     border-radius: 5px;
