--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -60,8 +60,8 @@
         Link:
         <a href="http://{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
       </p>
-      <p class="card-text" *ngIf="assetDetail?.creator && assetDetail?.creators">Submitted By : {{ assetDetail?.creator }}@{{ assetDetail?.creators }}</p>
-      <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn">Submitted Date :
+      <p class="card-text" *ngIf=" assetDetail?.mimeType !=='text/x-url'">Submitted By : {{ assetDetail?.organisation[assetDetail.organisation.length - 1] }}</p>
+      <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn && assetDetail?.mimeType !=='text/x-url'">Submitted Date :
         {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
       <div *ngIf="assetDetail?.artifactUrl && assetDetail?.mimeType === 'application/pdf'">
         <p>
@@ -123,11 +123,16 @@
 
     </div>
     <div class="card-footer text-muted pt-30 pb-0">
-      <p><span *ngIf="assetDetail?.version">Version : {{assetDetail?.version}}.0</span> <span
-          *ngIf="assetDetail?.creators">&nbsp;| Created By :
-          {{assetDetail?.creators}}</span>  <span *ngIf="assetDetail?.since"> &nbsp;| Created Year :
-          {{assetDetail?.year}} </span> <span *ngIf="assetDetail?.region"> &nbsp;| Country : {{assetDetail?.region}} </span>
-           <span *ngIf="assetDetail?.licensetype"> &nbsp;| License Type :
+      <p>
+        <span *ngIf="assetDetail?.version && assetDetail?.mimeType !=='text/x-url'">
+          Version : {{assetDetail?.version}}.0</span> 
+        <span 
+          *ngIf="assetDetail?.creators">
+          &nbsp;<span *ngIf="assetDetail?.mimeType !=='text/x-url'">|</span> {{assetDetail?.creators}}</span>  
+          <span *ngIf="assetDetail?.since"> &nbsp;| Created Year :
+          {{assetDetail?.year}} </span>
+           <span *ngIf="assetDetail?.region && assetDetail?.mimeType !=='text/x-url'"> &nbsp;| Country : {{assetDetail?.region}} </span>
+           <span *ngIf="assetDetail?.licensetype && assetDetail?.mimeType !=='text/x-url'"> &nbsp;| License Type :
                       {{assetDetail?.licensetype }}</span>
       </p>
       <p class="float-right"></p>
