--- a/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
@@ -21,9 +21,10 @@
           [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug !== 'sunbirdorg' && slug !== 'space'"></app-page-section>
         </div>
       </div>
-        <div class="twelve wide column">
-        <app-space-page-section (visits)="prepareVisits($event)" [enable]="true" (playEvent)="playContent($event)" [section]="pageSections "
-          [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug === 'space'"></app-space-page-section>
+        <div *ngIf="sectionData === true" class="twelve wide column">
+        <!-- <app-space-page-section (visits)="prepareVisits($event)" [enable]="true" (playEvent)="playContent($event)" [section]="pageSections "
+          [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug === 'space'"></app-space-page-section> -->
+          <app-space-view-all [sectionObj]="sectionObj"></app-space-view-all>
         </div>
 
       <div class="twelve wide column" *ngIf="showLoader">
@@ -87,6 +88,11 @@
 <sui-dimmer *ngIf="isOffline" class="page offline content" [isDimmed]="showExportLoader" [isClickable]="false">
   <div class="ui active centered inline loader"></div>
   <h2 class="mt-8"> {{resourceService.frmelmnts?.lbl?.exportingContent | interpolate:'{contentName}':contentName}}
+  </h2>
+</sui-dimmer>
+<sui-dimmer *ngIf="isOffline" class="page offline content" [isDimmed]="showDownloadLoader" [isClickable]="false">
+  <div class="ui active centered inline loader"></div>
+  <h2 class="mt-8"> {{resourceService.frmelmnts?.lbl?.downloadingContent | interpolate:'{contentName}':contentName}}
   </h2>
 </sui-dimmer>
 <app-offline-banner [slug]="slug"></app-offline-banner>
